got the new api style working

--- a/.ghc.environment.x86_64-linux-9.2.8
+++ b/.ghc.environment.x86_64-linux-9.2.8
@@ -8,6 +8,7 @@ clear-package-db
 global-package-db
 package-db /home/mahdi/.cabal/store/ghc-9.2.8/package.db
 package-db dist-newstyle/packagedb/ghc-9.2.8
+package-id dap-tui-0.1.0.0-inplace
 package-id aeson-2.2.1.0-ad3b152af02af403c4df3ff82f4a0e38aab475ed282bda69e860c078c0f84841
 package-id OneTuple-0.4.1.1-0dc65a8f19f98e55753d043da92b485bc6c5ab3a6249b6260b50003d7cc41730
 package-id base-4.16.4.0
@@ -76,6 +77,7 @@ package-id attoparsec-0.14.4-c6a7689c2f87fb8873f5952f364ebb48051274859f757504ba1
 package-id attoparsec-0.14.4-l-attoparsec-internal-1f99109fb1eff1857e649a749744f1fec5a9890868011feb64764007103c1c00
 package-id attoparsec-aeson-2.2.0.1-a685fcc2508c146a5cf5ec8d76e9647a6426869a782cdbfe49eafc124c086f79
 package-id case-insensitive-1.2.1.0-cf464fb7a6a721434f611c2e4be77ca8eed97c0fa4d3a72bcb9b8eafa00d713c
+package-id co-log-core-0.3.2.1-e200addee599aebc50f17fdc820bcfa8552a27ccf51d1dd31aace7c7f4acb50f
 package-id network-3.1.4.0-5a81a3a7d78c233bdcdb3a00cbe648cc21ace363e88250780a142d8222566e64
 package-id network-simple-0.4.5-4b9912a833e80d0637efe8df965d06088789602b5d9d4d980aa1a8a6983a4433
 package-id network-bsd-2.8.1.0-b9f66bd39da29916f122735490b93394977c547dc24fd49442b71a20ef49b76d
